@@ -5,6 +5,7 @@ $:.unshift(File.expand_path("#{dir}/../vendor/js-test-core/lib"))
 require "js_test_core"
 
 require "#{dir}/screw_unit/representations"
+require "#{dir}/screw_unit/thin_runner"
 
 JsTestCore.core_path = File.expand_path("#{dir}/../core/lib")
 JsTestCore::Resources::SpecFile.spec_representation_class = ScrewUnit::Representations::Spec
